lab1/Test/L1-A-10-81.output
Error Type A at Line 10
Error Type A at Line 21
Error Type B at Line 32
Error Type B at Line 43
Error Type B at Line 53
Error Type B at Line 54
